--- a/test.css
+++ b/test.css
@@ -1,16 +1,16 @@
 .container { 
-    width: 100%; /* Adjusted for responsiveness */
+    width: 100%; 
     height: 65px;
     background-color: blue;
     display: flex;
     justify-content: space-evenly;
-    align-items: center; /* Vertically center the links */
+    align-items: center; 
  }
  
  a {
-     text-decoration: none; /* Removes underline from links */
-     color: black; /* Default link color */
-     font-size: 50px; /* Adjust the font size as needed */
+     text-decoration: none; 
+     color: black; 
+     font-size: 50px; 
  }
  
  a:hover {
